--- a/src/app/Paginas/Body/backup/extras/extras.component.html
+++ b/src/app/Paginas/Body/backup/extras/extras.component.html
@@ -4,37 +4,147 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">{{msj}}</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 
-<div class="container text-center" *ngIf="extrasService.Extras.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">El Backup no tiene extras relacionados</h2>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<div class="modal fade" id="modalExtra" tabindex="-1" role="dialog" aria-labelledby="modalExtraTitle" aria-hidden="true" data-keyboard="false" data-backdrop="static" *ngIf="extra != null">
+  <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title centerTitleModal" id="modalExtraTitle">{{option}} Currency</h5>
+        <button type="button" class="close" (click)="closeModal()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form [formGroup]="extra" (ngSubmit)="operation()">
+        <div class="modal-body">
+          <div class="row" style="width: 100%; display: block; margin-bottom: 20px;" *ngIf="util.isDelete(option)">
+            <h5 class="text-center" style="font-weight: 500;">¿ Esta seguro de eliminar Extra núm: {{(extrasService.indexExtraSelected + 1)}} del Respaldo Id_backup: {{extrasService.id_backup}} ?</h5>
+          </div>
+
+          <div class="form">
+            <label for="id_extra">Id_Extra: </label>
+            <input type="number" class="form-control" id="id_extra" formControlName="id_extra" [ngClass]="(getError('id_extra') == '') ? 'valid-control' : 'invalid-control'">
+            <div class="invalid-feedback">{{ getError('id_extra')}}</div>
+          </div>
+          
+          <div class="form">
+            <label for="account">Account: </label>
+            <input type="text" class="form-control" id="account" formControlName="account" [ngClass]="(getError('account') == '') ? 'valid-control' : 'invalid-control'">
+            <div class="invalid-feedback">{{ getError('account')}}</div>
+          </div>
+          
+          <div class="form">
+            <label for="category">Category: </label>
+            <input type="text" class="form-control" id="category" formControlName="category" [ngClass]="(getError('category') == '') ? 'valid-control' : 'invalid-control'">
+            <div class="invalid-feedback">{{ getError('category')}}</div>
+          </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" (click)="closeModal()">Cerrar</button>
+          <button type="submit" [ngClass]="util.classModal(option)" [disabled]="extra.invalid">{{option}}</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
-<div *ngIf="extrasService.Extras.length > 0">
-  <table class="table table-hover">
+<!-- ------------------------------------------------------------------------------------------------------ -->
+
+<div class="container text-center" *ngIf="extrasService.Extras.length == 0" style="margin-top: 200px;">
+  <h2 class="font-weight-lighter">{{util.msj}}</h2>
+</div>
+<div *ngIf="extrasService.Extras.length > 0" class="overflow-x-scroll">
+  <table class="table table-hover table-fixed-xl">
     <thead class="thead-dark">
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
-      <th scope="col" class="Encabezado-Tabla">id_extra</th>
-      <th scope="col" class="Encabezado-Tabla">account</th>
-      <th scope="col" class="Encabezado-Tabla">category</th>
+      <th scope="col" class="Encabezado-Tabla font-italic">Repeated</th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Id_Extra
+          <input type="number" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="extrasService.filtersSearch.id_extra.value" name="id_extra" (keyup)="extrasService.actionFilterEvent($event, 'id_extra', true)">
+          <button type="button" [ngClass]="(extrasService.filtersSearch.id_extra.isFilter) ? 'close': 'btnFilter-disabled'" (click)="extrasService.resetValuefiltroSearch('id_extra')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Account
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="extrasService.filtersSearch.account.value" name="account" (keyup)="extrasService.actionFilterEvent($event, 'account', true)">
+          <button type="button" [ngClass]="(extrasService.filtersSearch.account.isFilter) ? 'close': 'btnFilter-disabled'" (click)="extrasService.resetValuefiltroSearch('account')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Category
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="extrasService.filtersSearch.category.value" name="category" (keyup)="extrasService.actionFilterEvent($event, 'category', true)">
+          <button type="button" [ngClass]="(extrasService.filtersSearch.category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="extrasService.resetValuefiltroSearch('category')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
       <th scope="col" class="Encabezado-Tabla">Operación</th>
-
     </thead>
-    <tbody>
-    <tr *ngFor="let extra of extrasService.Extras; let i = index" >
-      <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
-
-      <td class="Celdas-Tabla">{{extra.id_extra}}</td>
-      <td class="Celdas-Tabla">{{extra.account}}</td>
-      <td class="Celdas-Tabla">{{extra.category}}</td>
-
-      <td class="Celdas-Tabla">
-        <button type="button" class="btn btn-primary" style="width: 100px; margin-right: 20px; font-size: 20px" >Editar</button>
-        <button type="button" class="btn btn-danger" style="width: 100px; margin-left: 20px; font-size: 20px" (click)="eliminar(i, back.id_backup)">Eliminar</button>
-      </td>
-    </tr>
-
+    <tbody *ngIf="!extrasService.isFilter()">
+      <tr *ngFor="let extra of extrasService.Extras; let i = index" >
+        <td class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+        <td class="Celdas-Tabla font-italic">{{extra.repeated}}</td>
+        <td class="Celdas-Tabla">{{extra.id_extra}}</td>
+        <td class="Celdas-Tabla">{{extra.account}}</td>
+        <td class="Celdas-Tabla">{{extra.category}}</td>
+        <td class="Celdas-Tabla">
+          <button type="button" class="btn btn-primary btn-update" (click)="accionExtras(util.ACTUALIZAR, extra, i)">
+            <span>
+              <fa-icon [icon]="util.faPen"></fa-icon>
+            </span>
+          </button>
+          <button type="button" class="btn btn-danger btn-delete" (click)="accionExtras(util.ELIMINAR, extra, i)">
+            <span>
+              <fa-icon [icon]="util.faTrash"></fa-icon>
+            </span>
+          </button>
+        </td>
+      </tr>
+      <div
+        [fromRoot]="true"
+        infiniteScroll
+        [infiniteScrollDistance]="2"
+        infiniteScrollContainer=".table-fixed-xl tbody"
+        (scrolled)="onScroll()">
+      </div>
+      <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+      <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
+    </tbody>
+    <tbody *ngIf="extrasService.isFilter()">
+      <tr *ngFor="let extra of extrasService.extrasFilter; let i = index" >
+        <td class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+        <td class="Celdas-Tabla">{{extra.repeated}}</td>
+        <td class="Celdas-Tabla">{{extra.id_extra}}</td>
+        <td class="Celdas-Tabla">{{extra.account}}</td>
+        <td class="Celdas-Tabla">{{extra.category}}</td>
+        <td class="Celdas-Tabla">
+          <button type="button" class="btn btn-primary btn-update" (click)="accionExtras(util.ACTUALIZAR, extra, i)">
+              <span>
+                <fa-icon [icon]="util.faPen"></fa-icon>
+              </span>
+          </button>
+          <button type="button" class="btn btn-danger btn-delete" (click)="accionExtras(util.ELIMINAR, extra, i)">
+              <span>
+                <fa-icon [icon]="util.faTrash"></fa-icon>
+              </span>
+          </button>
+        </td>
+      </tr>
     </tbody>
   </table>
 </div>
+<button type="button" class="btn btn-success rounded-circle addButton" (click)="accionExtras(util.AGREGAR)">
+  <span>
+    <fa-icon [icon]="util.faPlus"></fa-icon>
+  </span>
+</button>
